--- a/408/操作系统.md
+++ b/408/操作系统.md
@@ -18,19 +18,35 @@
 
 #### 操作系统的特征
 
+**操作系统是伴随着多道程序技术而出现的。**
+
+**并发**：两个或者多个事件在**同一时间间隔内发生**。宏观上时同时发生的，微观上是交替进行的。
+
+**并行**：两个或者多个事件在**同一时刻同时发生**。
+
 作为一种系统软件，操作系统有**并发性、共享性、虚拟性、异步性的特征**。
 
-1. **并发性**：在多道程序环境下，并发性是指两个或多个事件在同一时间间隔内发生，即宏观上有多道程序同时执行，**而微观上，在单处理机系统中每一个时刻仅能执行一道程序，是交替进行的**。
-2. 共享性：共享指系统中的资源在一个时间段内可被多个并发执行的进程使用。
-3. 随机性：也称不确定性，是指操作系统的运行是在一种随机的环境下进行的，充分考虑各种各样的可能性，稳定、高效地控制资源的使用和程序的运行。
+1. **并发性**：计算机中同时运行着多个程序，这些程序宏观上看是同时运行，但微观上是交替运行。
+   1. **单核CPU宏观上有多道程序同时执行，而微观上每一个时刻仅能执行一道程序，是交替发生的**。
+   2. 多核CPU可以同时执行多个程序，多个程序可以**并行**。
 
-> 若一个单处理机系统中有多个进程存在，则这些进程是并发运行的。
+2. **共享性**：共享指系统中的资源在一个时间段内可被多个并发执行的进程使用。
+   1. **互斥共享方式**：一个时间段内，只允许一个进程访问该资源。
+   2. **同时共享方式**：同时共享允许多个进程同时访问资源，如QQ和微信同时发送文件。这种情况下，进程可能会交替访问资源，如QQ和微信交替读取硬盘中的文件数据。
+
+3. **虚拟性**：
+   1. 虚拟存储器技术通过将物理内存对应为逻辑上的大内存，使得用户看到的内存容量远大于实际物理内存容量。**使用了虚拟技术中的空分复用技术**。
+   2. 虚拟处理器技术让用户感受到多个CPU同时在服务，实际上是通过微小时间片的切换实现的，支持单核CPU上多个程序的并发执行。**使用了虚拟技术中的时分复用技术**。
+
+4. **异步性**：异步性指多道程序环境下，由于资源有限，进程的执行不是一贯到底，而是走走停停，以不可预知的速度向前推进。
+
+> 并发性和共享性是操作系统中两个互为存在条件的基本特征。没有并发性，共享性失去意义；没有共享性，并发性无法实现。
 
 
 
 #### 操作系统的功能
 
-**从用户和计算机之间的接口的观点来看，操作系统向上层提供的服务：GUI图形化界面、联机命令接口（终端）、脱机命令接口（.bat）、程序接口（编写代码中的系统调用）。**
+**从用户和计算机之间的接口的观点来看，操作系统向上层提供的服务：GUI图形化用户接口、联机命令接口（终端）、脱机命令接口（.bat）、程序接口（编写代码中的系统调用）。**
 
 从控制和管理整个计算机系统的硬件和软件资源的观点来看，操作系统的功能可以分为**进程管理(处理机管理)、存储管理、文件管理、设备管理和作业管理(命令接口)**5大部分。操作系统的5大部分通过相互配合、协调工作，以实现对计算机系统中资源的管理，控制任务的运行。
 
@@ -48,7 +64,11 @@
 
 #### 操作系统的发展
 
-操作系统从最初20世纪50年代的手工操作阶段，到早期的批处理程序，再到多道批处理系统、分时系统、实时系统，以及后来的个人操作系统、网络操作系统、分布式操作系统、嵌入式操作系统、智能卡操作系统等，经历了较复杂的发展的历程。
+操作系统从最初20世纪50年代的**手工操作**阶段，到早期的**批处理程序，再到多道批处理系统（操作系统开始出现）、分时系统、实时系统**，以及到了我们现在的的个人操作系统、网络操作系统、分布式操作系统、嵌入式操作系统、智能卡操作系统等，经历了较复杂的发展的历程。
+
+在**手工操作阶段**，程序员通过在纸带上打孔的方式编写程序，程序运行结果通过纸带机输出，过程缓慢，且用户独占全机，资源利用率极低。随着**单道批处理系统**的引入，脱机输入输出技术得以应用，磁带替代了纸带，**监督程序控制自动从磁带中输入输出作业数据**，从而提高了输入输出速度。不过，此时内存中同一时刻只能有一道程序运行，程序之间串行执行。**多道批处理系统**的出现标志着操作系统的正式诞生，**支持多道程序并发运行**，多个程序共享计算机资源，提高了资源利用率。然而，多道批处理系统不提供人机交互功能，用户无法调试程序或输入参数。**分时操作系统**则以时间片为单位轮流为各个用户或作业服务，**允许用户通过键盘、鼠标等终端与计算机进行交互**，多个用户可以独立使用同一台计算机。尽管分时操作系统提升了用户体验，但它的缺点是无法优先处理紧急任务。**实时操作系统**根据任务**优先响应紧急任务**，分为硬实时和软实时操作系统。硬实时操作系统必须在规定时间内处理任务，否则会导致严重后果；而软实时操作系统虽不严格要求处理时间，但仍需实时显示更新信息。
+
+此外，还有**网络操作系统、分布式操作系统和个人计算机操作系统**。网络操作系统用于管理网络资源并提供网络服务，分布式操作系统将多台计算机组成一个整体，共同完成任务，而个人计算机操作系统（如Windows、Linux等）则用于管理个人计算机的硬件和软件资源。
 
 
 
@@ -64,9 +84,9 @@
 
 ##### 2. 分时系统
 
-用户通过终端交互式地向系统提出命令，系统接受命令之后，采用时间片轮转方式处理服务请求。把处理机的响应时间分成若干个大小相等(或不相等)的时间单位，称为时间片，每个终端用户获得 CPU，就等于获得一个时间片，该用户程序开始运行，当时间片到(用完)，用户程序暂停运行，等待下一次运行。
+用户通过终端交互式地向系统提出命令，系统接受命令之后，采用时间片轮转方式处理服务请求。把处理机的响应时间分成若干个大小相等的时间单位，称为时间片，每个终端用户获得 CPU，就等于获得一个时间片，该用户程序开始运行，当时间片到用完，用户程序暂停运行，等待下一次运行。
 
-特性：多路性:多个用户在同时使用一台计算机。交互性:用户直接干预操作的每一步。独占性:用户感觉不到计算机为他人服务。及时性:系统能对用户提出的请求及时给予响应。
+多个用户在同时使用一台计算机，用户感觉不到计算机为他人服务，系统能对用户提出的请求及时给予响应。
 
 ##### 3. 实时系统
 
@@ -84,13 +104,62 @@
 
 #### 内核态与用户态
 
+操作系统在计算机上运行，通过执行**二进制机器指令**来实现程序逻辑。对于使用高级语言编写的程序，它们需要经过编译器编译成机器指令，才能被CPU执行。**机器指令是CPU能够识别的基本命令**，负责执行加法、赋值等基本操作。
+
+操作系统内核包含系统最核心、必不可少的功能。内核作为系统资源管理者，执行特权指令以管理硬件资源。特权指令的使用限于内核程序，应用程序不得使用。**操作系统内核程序负责系统资源管理，而应用程序运行在操作系统之上。内核程序使用特权指令，而应用程序使用非特权指令。**
+
+**CPU有内核态和用户态两种状态，内核态执行特权指令，用户态执行非特权指令。程序状态寄存器（PSW）的二进制位标记CPU状态，1表示内核态，0表示用户态。内核态和用户态分别对应内核程序和应用程序的执行。**
+
+1. **内核态**：在内核态下，程序可以执行任何CPU指令，并且可以直接访问硬件资源和系统内存。此时，操作系统内核拥有完全的控制权，能够进行进程管理、内存管理、设备管理等操作。
+2. **用户态**：用户态是应用程序运行的模式，此时程序受到限制，不能直接访问硬件或管理系统资源。用户态下的程序只能执行有限的指令，并通过系统调用与内核进行交互。
+
+**切换机制**：
+
+- **用户态到内核态**：
+
+  - **系统调用**：应用程序通过特定的API（如`open()`、`read()`等）进行系统调用，请求操作系统提供服务。此时，**程序会执行一个特定的指令（如`int`指令在x86架构上）触发中断**。
+  - **异常或错误**：程序在执行过程中遇到异常（如非法操作、内存访问错误）时，操作系统会自动进入内核态进行处理。
+  - **中断**：硬件设备（如定时器、I/O设备）发送中断信号，操作系统会中断当前用户程序，转入内核态进行相应的处理。
+
+- **内核态到用户态**：
+
+  - **服务完成**：内核完成对系统调用的处理，准备将结果返回给用户程序。
+
+  - **调度**：在多进程环境中，内核可能选择另一个用户程序进行调度，这也需要切换回用户态。
+
+这种切换机制通过上下文切换和特权指令的控制，确保了系统的安全性和稳定性，同时允许多种程序在同一台计算机上有效运行。
 
 
-#### 中断、异常 
+
+#### 中断、异常
+
+**中断是操作系统内核重新夺回CPU使用权的唯一途径**。中断会使CPU由用户态变为内核态。没有中断技术无法实现多道程序并发，甚至没有操作系统。
+
+**内中断又称异常**，与当前执行的指令有关。
+
+- **非法指令或非法参数**会引发内中断。
+- 应用程序**执行陷入指令**（以请求操作系统服务，陷入指令不是特权指令）。
+
+外中断与当前执行的指令无关，来源于CPU外部。**CPU在每个指令执行结束后检查外部中断信号**。
+
+- **时钟中断，实现多道程序并发运行**。
+- **I/O设备发出中断信号**，通知CPU设备操作完成。
+
+中断处理的基本流程如下：
+
+1. **中断信号的产生**：当外设或程序需要CPU处理时，生成中断信号。
+2. **中断检测**：CPU在每个指令周期结束时检查是否有中断信号。如果有，立即响应中断。
+3. **保存上下文**：CPU保存当前执行程序的状态（上下文），包括程序计数器、寄存器等，以便在中断处理完成后能够恢复执行。
+4. **中断向量**：CPU使用**中断向量表（中断向量是一组指向中断处理程序的指针）找到对应中断的处理程序地址**。
+5. **执行中断处理程序**：CPU跳转到中断处理程序执行，处理相关的事件或任务。
+6. **恢复上下文**：中断处理完成后，CPU恢复之前保存的上下文。
+7. **返回原程序**：CPU继续执行之前被中断的程序，恢复正常运行。
 
 
 
 #### 系统调用
+
+
 
 
 
