--- a/408/操作系统.md
+++ b/408/操作系统.md
@@ -159,11 +159,37 @@
 
 #### 系统调用
 
+从用户和计算机之间的接口的观点来看，操作系统向上层提供的服务：GUI图形化用户接口、联机命令接口（终端）、脱机命令接口（.bat）、程序接口（编写代码中的系统调用）。**其中程序接口就是由一组系统调用组成**。
 
+系统调用时操作系统给应用程序提供的接口，是应用程序获取操作系统内核服务的一种请求途径。
+
+**系统调用与库函数的主要区别在于，库函数可能直接提供服务而无需系统调用，但某些封装基于系统调用的的操作必须通过系统调用**。
+
+**系统调用的必要性体现在对共享资源的互斥访问管理，确保并发进程不会导致资源使用冲突**。所有与共享资源相关的操作，如内存分配与回收、IO设备访问、文件操作、进程管理、设备管理等，通常需要通过系统调用。
+
+陷入指令（trap指令）是在用户态下执行的特殊指令，执行后会引发内中断，使CPU转入内核态运行内核程序。**陷入指令的目的是主动将CPU控制权交给操作系统内核，以请求服务。陷入指令不是特权指令**，但其执行会导致应用程序暂停，等待操作系统处理。
 
 
 
 ### 操作系统体系结构
+
+#### 大内核
+
+
+
+#### 微内核
+
+
+
+#### 分层结构
+
+
+
+#### 模块化
+
+
+
+#### 外核
 
 
 
