--- a/408/操作系统.md
+++ b/408/操作系统.md
@@ -173,23 +173,90 @@
 
 ### 操作系统体系结构
 
-#### 大内核
+#### 大内核 Vs. 微内核
 
+操作系统体系结构包括大内核和微内核两种类型。内核运行在内核态。
 
+![image-20241029100855851](https://raw.githubusercontent.com/qinshuxiang/repo/main/操作系统结构.png)
 
-#### 微内核
+**微内核设计将只把最核心功能放在内核中，如时钟管理、中断处理、原语（不可中断），微内核设计方法是只保留与硬件关系最紧密的功能，其他功能放在内核外。微内核设计需要频繁切换CPU状态，影响系统性能。**
+
+大内核设计包括进程管理、存储器管理、设备管理、时钟管理、中断处理、原语（不可中断）。大内核内核代码庞大，结构混乱，难以维护。大内核优点是性能高，因为应用程序请求内核服务时CPU状态转换次数少
 
 
 
 #### 分层结构
 
+分层结构操作系统将内核分为多层，**每层只能调用相邻的低层**。 
+
+优点包括便于调试和验证，易于扩充和维护。**缺点包括效率低，功能需要一层层传递调用，限制了系统调用的直接性，底层无法调用高层。**
+
 
 
 #### 模块化
 
+模块化结构将操作系统内核划分为多个模块，各模块之间相互协作。
+
+优点包括逻辑清晰，易于维护，**支持动态加载内核模块**。缺点包括接口定义可能不合理，模块间依赖难以调试和验证。
+
 
 
 #### 外核
+
+外核操作系统由内核和外核两部分组成，**外核负责分配未经抽象的硬件资源**。
+
+**优点包括提高系统性能，减少虚拟硬件资源的映射层**。缺点包括降低系统一致性，增加系统复杂度。
+
+
+
+### 操作系统引导
+
+操作系统引导（OS Booting）是指计算机开机后，将操作系统从存储设备（如硬盘或SSD）加载到内存，并启动系统的过程。这个过程确保计算机硬件初始化完成后，操作系统可以正常运行。
+
+#### **1. 上电自检（POST）**
+
+- 计算机内存由RAM和ROM组成，RAM用于存储操作系统数据，ROM存储基本输入输出系统（BIOS）程序，用于引导操作系统，当计算机通电时，CPU从特定的主存位置开始读取指令，**BIOS**（基本输入输出系统）或**UEFI**（统一可扩展固件接口）被执行。
+- **其主要任务是检测和初始化硬件（如CPU、内存、显卡、硬盘等），并确保硬件工作正常**。
+- 如果检测出硬件问题，BIOS/UEFI会发出错误提示（如蜂鸣声或错误信息）。
+
+#### **2. 引导加载程序的加载执行**
+
+- BIOS/UEFI从预定义的引导设备（如硬盘、U盘或网络）中读取引导扇区。
+  - **BIOS**：读取硬盘的**主引导记录（MBR）**，位于磁盘的第一个扇区（512字节）。
+  - **UEFI**：读取**EFI系统分区**中的引导程序，如`bootx64.efi`。
+- **MBR**或EFI加载的是**第一阶段引导加载程序**（如`GRUB`、`LILO`等），这是一个小型程序，用于找到并加载操作系统的内核。
+
+#### **3. 内核加载**
+
+- 引导加载程序定位操作系统的**内核映像**文件，并将其从存储设备加载到内存中。
+- 加载内核后，将**控制权**交给内核，并开始执行内核代码。
+
+#### **4. 系统初始化**
+
+- 内核初始化系统的**硬件设备**，如内存管理单元（MMU）、I/O设备等。
+- 内核启动必要的服务（如进程调度、文件系统管理、网络服务）。
+- 启动**第一个用户进程**（如`init`或`systemd`），负责管理其他系统进程。
+
+
+
+### 虚拟机
+
+在计算机系统中，虚拟机是一种模拟计算机系统的软件环境，可以在物理硬件上运行多个操作系统和应用程序。虚拟机主要分为第一类虚拟机监控器和第二类虚拟机监控器。
+
+**第一类虚拟机监控器**直接**运行在物理硬件上**，是一种裸机虚拟化技术。这类虚拟机监控器无需依赖主机操作系统，可以直接控制和管理硬件资源。虚拟机管理程序运行在最高特权级别，可以使用最高特权指令。
+
+**第二类虚拟机监控器**运行在**主机操作系统之上**，需要依赖操作系统提供的服务和硬件访问接口。它更适合桌面环境中的开发、测试和个人用户。虚拟机管理程序部分运行在用户态，部分运行在内核态。第二类虚拟机管理程序截获上层应用程序的系统调用，并代替其向宿主操作系统发出请求
+
+|    特点    |                   第一类 VMM                    |                          第二类 VMM                          |
+| :--------: | :---------------------------------------------: | :----------------------------------------------------------: |
+|  运行层级  |               直接运行在硬件之上                |                     运行在 Host OS 之上                      |
+|  资源分配  |         自行分配未经抽象的物理硬件资源          |               依赖于 Host OS 为其分配物理资源                |
+|  虚拟磁盘  |         在原本的硬盘上自行分配存储空间          | 拥有自己的虚拟磁盘，实际上是 Host OS 文件系统中的一个大文件  |
+|  虚拟内存  |             直接控制和分配物理资源              |               Guest OS 分配到的内存是虚拟内存                |
+|    性能    |       性能更好，不需要和 Host OS 竞争资源       |              性能较差，需要 Host OS 作为"中介"               |
+| 虚拟机数量 |       相同的硬件资源可以支持更多的虚拟机        | 相对更少，Host OS 本身需要使用物理资源，Host OS 上运行的其他进程也需要物理资源 |
+|   迁移性   |                      更差                       | 更好，只需导出虚拟机镜像文件即可迁移到另一台 Host OS 上，商业化应用更广泛 |
+|   特权级   | 运行在最高特权级(Ring0)，可以执行最高特权的指令 | 部分运行在用户态、部分运行在内核态，Guest OS 发出的系统调用会被 VMM 截获，并转化为 VMM 对 Host OS 的系统调用 |
 
 
 
@@ -199,13 +266,63 @@
 
 #### 进程概念
 
+**进程由PCB、程序段（指令集合）、数据段（程序运行产生变量）组成。**
+
+PCB是进程存在的唯一标志，进程的创建、销毁都会伴随操作系统创建、回收PCB。
+
+- **进程描述信息**：进程标识符PID、用户标识符UID
+- **进程控制和管理信息**：CPU、磁盘、网络流量使用情况，进程当前状态：就绪态、运行态、阻塞态
+- **资源分配清单**：正在使用文件、正在使用内存区域、正在使用I/O设备
+- **处理机相关信息**：PSW、PC等各种寄存器的值（用于实现进程切换）
+
+进程的特征：
+
+1. 动态性：进程是程序的一次执行过程，进程是动态产生、变化和消亡的。
+2. 并发性：多个进程实体在内存中，各进程并发执行。
+3. 独立性：进程时能够独立运行、获得资源、接受调度的基本单位。
+4. 异步性：进程以各自独立的速度向前推进。
+5. 结构性：每个进程都有一个PCB、程序段和数据段。
+
 
 
 #### 进程的状态与转换
 
+进程的状态包括创建态、就绪态、运行态、阻塞态和终止态。 
+
+- 创建态：进程正在被创建，操作系统**分配系统资源并初始化PCB**。
+- 就绪态：进程具备运行条件，等待CPU空闲。
+- 运行态：进程正在CPU上运行。
+- 阻塞态：进程等待某个事件发生。
+- 终止态：进程运行结束，操作系统**回收资源并撤销PCB**。
+
+![image-20241029112138873](https://raw.githubusercontent.com/qinshuxiang/repo/main/进程的状态转换.png)
+
+进程的组织方式
+
+- 链式方式:
+  - 在内存中，**每个进程控制块(PCB)通过指针链接到下一个进程控制块**。
+  - 形成一个单向链表，链头指向就绪队列的首进程，链尾指向最后一个进程。
+  - 这种方式便于进程的插入和删除操作，但需要顺序搜索整个链表。
+- 索引方式:
+  - 利用一张索引表，表中的每一项对应一个进程控制块在内存中的地址。
+  - 通过索引表可以直接找到对应进程控制块的位置，不需要遍历整个链表。
+  - 这种方式查找速度快，但需要额外维护一张索引表，占用更多内存空间。
+
 
 
 #### 进程控制
+
+进程控制包括创建新进程、撤销已有进程、实现进程状态转换等功能，**核心是实现进程的状态转换**。
+
+进程控制需要用原语来实现，原语是操作系统内核中的特殊程序，具有原子性，原语的执行必须一气呵成，中间不可被中断。
+
+> 关中断指令：执行后，CPU不再例行检查中断信号。
+>
+> 开中断指令：执行后，CPU恢复例行检查中断信号。
+>
+> 关中断和开中断指令中间的指令序列执行一气呵成，不可被中断。
+
+
 
 
 
