--- a/408/操作系统.md
+++ b/408/操作系统.md
@@ -177,7 +177,7 @@
 
 操作系统体系结构包括大内核和微内核两种类型。内核运行在内核态。
 
-![image-20241029100855851]（https://raw.githubusercontent.com/qinshuxiang/repo/main/操作系统结构.png）
+![image-20241029100855851](https://raw.githubusercontent.com/qinshuxiang/repo/main/操作系统结构.png)
 
 **微内核设计将只把最核心功能放在内核中，如时钟管理、中断处理、原语（不可中断），微内核设计方法是只保留与硬件关系最紧密的功能，其他功能放在内核外。微内核设计需要频繁切换CPU状态，影响系统性能。**
 
