--- a/补充知识点/网络与信息安全.md
+++ b/补充知识点/网络与信息安全.md
@@ -38,9 +38,9 @@
 
 #### 攻击的方式
 
-渗透测试：许可的情况下，进行模拟攻击。？
+**漏洞检查**：主要通过分析IT基础架构来检测系统中可能存在的漏洞，通常使用**自动化工具**或开源软件来扫描和识别潜在的安全漏洞。这些工具可以自动检测系统中的弱点和配置错误，帮助识别可能被攻击者利用的漏洞。
 
-漏洞扫描：基于漏洞数据库，进行监测。？
+**渗透测试**：通过**模拟恶意黑客的攻击方法**，实际尝试利用这些漏洞来分析可能对信息系统造成的破坏。渗透测试不仅**依赖于自动化工具，还需要人为参与**，以确保测试的全面性和有效性。渗透测试人员会使用各种工具和技术，
 
 蜜罐
 
