--- a/408/计算机组成原理.md
+++ b/408/计算机组成原理.md
@@ -2,24 +2,6 @@
 
 ## 概述
 
-### 计算机组成原理
-
-计算机 = 硬件 + 软件，软件包含系统软件与应用软件。
-
-> 系统软件包括：操作系统、数据库管理系统、标准程序库、网络软件、语言处理程序、服务程序
-
-**计算机组成原理就是在研究计算机硬件的底层协调和工作方式**。其中，**计算机硬件包括CPU、内存、外存、显卡等部件**，而操作系统和应用软件安装在计算机硬件之上，通过计算机网络实现计算机之间的信息互联互通。
-
-**CPU**：型号和性能决定游戏图像处理速度。有金属针脚，用于传递数据信息。
-
-**内存**：大小影响多应用程序的流畅性。有金属针脚，用于传递数据信息。**CPU和内存之间的数据交换通过主板上的印刷电路板传输二进制信息。**
-
-**外存**：容量决定手机或电脑中可存储的电影数量。有金属针脚，用于传递数据信息。
-
-**显卡**：性能影响游戏图像处理。
-
-
-
 ### 计算机发展历程
 
 1. 第一代计算机采用**电子管**作为逻辑元件，**使用计算机语言编程**，使用穿孔卡片、纸带。
@@ -37,25 +19,47 @@
 
 #### 计算机系统的基本组成
 
+计算机 = 硬件 + 软件，软件包含系统软件与应用软件。
+
+> 系统软件包括：操作系统、数据库管理系统、标准程序库、网络软件、语言处理程序、服务程序
+
 
 
 #### 计算机硬件的基本组成
 
+**计算机组成原理就是在研究计算机硬件的底层协调和工作方式**。其中，**计算机硬件包括CPU、内存、外存、显卡等部件**，而操作系统和应用软件安装在计算机硬件之上，通过计算机网络实现计算机之间的信息互联互通。
 
+**CPU**：型号和性能决定游戏图像处理速度。有金属针脚，用于传递数据信息。
 
-#### 计算机软件和硬件的关系
+**内存**：大小影响多应用程序的流畅性。有金属针脚，用于传递数据信息。**CPU和内存之间的数据交换通过主板上的印刷电路板传输二进制信息。**
+
+**外存**：容量决定手机或电脑中可存储的电影数量。有金属针脚，用于传递数据信息。
+
+**显卡**：性能影响游戏图像处理。
 
 
 
 #### 计算机的工作过程
 
+计算机的工作过程就是执行指令的过程，指令由操作码和操作数组成，操作码指明本指令完成的操作，地址码指明本指令的操作对象。指令按照存储器的地址顺序连续的存放在存储器中。
 
+为了纪录程序的执行过程，需要一个记录读取指令地址的寄存器，称为指令地址寄存器，或者程序计数器。指令的读取就可以根据程序计数器所指出的指令地址来决定读取的指令，由于指令通常按照地址增加的顺序存放，故此，每次读取一条指令之后，程序计数器加一就为读取下一条指令做好准备。
 
 
 
 ### 计算机的性能指标
 
-吞吐量、响应时间;CPU 时钟周期、主频、CPI、CPU 执行时间;MIPS、MFLOPS 、GFLOPS、TFLOPS、PFLOPS。
+吞吐量：单位时间内的数据输出数量。
+
+响应时间：从事件开始到事件结束的时间，也称执行时间。
+
+CPU时钟周期：机器主频的倒数
+
+主频：CPU工作主时钟的频率
+
+CPI：执行一条指令所需要的平均时钟周期
+
+CPU 执行时间;MIPS、MFLOPS 、GFLOPS、TFLOPS、PFLOPS。
 
 
 
@@ -65,21 +69,61 @@
 
 #### 进位计数制及其相互转换
 
+进位计数制是指按照进位制的方法表示数，不同的数制均涉及两个基本概念：基数和权。
+
+基数：进位计数制中所拥有数字的个数。
+
+权：每位数字的值等于数字乘以所在位数的相关常数，这个常数就是权。
+
+##### 二进制数、八进制数和十六进制数转换成十进制数
+
+
+
+##### 十进制数转换成二进制数
+
+
+
+##### 二进制数、八进制数和十六进制数之间的转换
+
 
 
 #### 真值和机器数
+
+真值：数据的数值通常以正(+)负(-)号后跟绝对值来表示，称之为真值。
+机器数：在计算机中正负号也需要数字化，一般用0表示正号，1表示负号。把符号数字化的数成为机器数。
 
 
 
 #### BCD 码
 
+在计算机中采用4位二进制码对每个十进制数位进行编码。4位二进制码有16种不同的组合，从中选出10种来表示十进制数位的0～9，用0000，0001，…，1001分别表示0，1，…，9，每个数位内部满足二进制规则，而数位之间满足十进制规则，故称这种编码为以二进制编码的十进制（binary coded decima1，简称BCD）码
 
 
 #### 字符与字符串
 
+在计算机中要对字符进行识别和处理，必须通过编码的方法，按照一定的规则将字符用一组二进制数编码表示。字符的编码方式有多种，常见的编码有ASCII码、EBCDIC码等。
+
+ASCII码用7位二进制表示一个字符，总共128个字符元素，包括10个十进制数字（0-9）、52个英文字母（A-Z和a-z）、34专用符号和32控制符号。
+
+EBCDIC码为Extended Binary Coded Decimal Interchange Code的简称，它采用8位来表示一个字符。
+
+向量存储法：字符串存储时，字符串中的所有元素在物理上是邻接的。
+
+串表存储法：字符串的每个字符代码后面设置一个链接字，用于指出下一个字符的存储单元的地址。
+
 
 
 #### 校验码
+
+##### 奇偶校验码
+
+
+
+##### 海明校验码
+
+
+
+##### CRC校验码
 
 
 
@@ -91,9 +135,18 @@
 
 ##### 无符号数的表示
 
+无符号数就是指正整数，机器字长的全部位数均用来表示数值的大小，相当于数的绝对值。
+
 
 
 ##### 有符号整数的表示
+
+根据符号位和数值位的编码方法不同，机器数分为原码、补码和反码。
+
+- 原码：正0 负1 + 机器数 [1111 1111 , 0111 1111]
+- 反码：正数为原码，负数原码取反（除符号位
+- 补码：正数为原码，负数反码+1（符号不变，最后一个1右边不变，左边取反
+- 移码：补码的符号位取反
 
 
 
@@ -143,15 +196,30 @@
 
 ### 存储器的分类
 
+1. 按存储介质分类
+   1. 半导体存储器
+   2. 磁表面存储器
+   3. 磁芯存储器
+   4. 光盘存储器
+2. 按存取方式分类
+   1. 随机存储器
+   2. 只读存储器
+   3. 串行访问存储器
+3. 按在计算机中的作用分类
+
 
 
 ### 存储器的层次化结构
+
+存储器有3个重要的指标：速度、容量和每位价格，一般来说，速度越快，位价越高；容量越大，位价越低，容量大，速度就越低。
 
 
 
 ### 半导体随机存取存储器
 
 1.SRAM 存储器 2.DRAM 存储器 3.只读存储器 4.Flash 存储器
+
+
 
 ### 主存储器与 CPU 的连接
 
@@ -169,11 +237,7 @@
 
 高速缓冲存储器（Cache）是位于CPU和主存储器之间，规模较小，但速度很高的存储器，通常由SRAM组成。由于CPU的速度比主存快的多，所以引入Cache，用来存放一些CPU可能会用到的数据，减少了CPU的等待时间，所以Cache解决CPU和主存之间的速度匹配问题。
 
-
-
 设置缓冲区的主要目的是缓和CPU的快速与设备的慢速之间的矛盾，若I/O花费时间比CPU处理时问短得多，则没有必要设置缓冲区。
-
-
 
 RAID5是一种存储性能、数据安全和存储成本兼顾的存储解决方案。做RAID5阵列所有磁盘容量必须一样大，当容量不同时，会以最小的容量为准，硬盘转速最好一样，否则也会影响性能。RAID5把数据和相对应的奇偶校验信息存储到组成RAID5的各个磁盘上，其中任意￼块磁盘上都存储完整的数据，也就是说有相当于一块磁盘容量的空间用于存储奇偶校验信息，当RAID5的一个磁盘发生损坏后，不会影响数据的完整性，从而保证了数据安全。
 
