--- a/408/计算机网络.md
+++ b/408/计算机网络.md
@@ -2,9 +2,9 @@
 
 #### 计算机网络基础概念
 
-计算机网络技术：是**通信技术与计算机技术相**结合的产物。
+**计算机网络技术**：是**通信技术与计算机技术相**结合的产物。
 
-计算机网络：互连、自治的多个计算机系统，通过各种**通信设备和线路**连接起来，在**网络协议和软件的支持**下进行数据通信，实现**信息交换和资源共享**的系统。
+**计算机网络**：互连、自治的多个计算机系统，通过各种**通信设备和线路**连接起来，在**网络协议和软件的支持**下进行数据通信，实现**信息交换和资源共享**的系统。
 
 计算机网络由若干**结点**和连接这些结点的**链路**组成。结点可以是计算机、集线器、交换机、路由器等。链路可以是有线链路、无线链路。
 
@@ -14,9 +14,9 @@
 >
 > 在这些电脑和手机当中我们会安装一些方便易用的软件，比如说百度网盘或者微信，我们可以用百度网盘去共享一些资源等等。
 
-**互连网：由路由器把两个或者多个计算机网络连接起来的网络称为互联网，路由器也可以和路由器互连，可以使用任意的协议通信。**
+**互连网**：由路由器把两个或者多个计算机网络连接起来的网络称为互联网，路由器也可以和路由器互连，**可以使用任意的协议通信**。
 
-**互联网：覆盖全世界范围的互连网（因特网）。由ISP（互联网服务提供商：移动、电信、联通等）和国际机构提供。互联网必须使用TCP/IP协议族通信。**
+**互联网**：覆盖全世界范围的互连网（因特网）。**由ISP（互联网服务提供商：移动、电信、联通等）和国际机构提供**。**互联网必须使用TCP/IP协议族通信。**
 
 
 
@@ -38,20 +38,20 @@
 
 ##### 2. 按工作方式
 
-- 边缘部分：由连接到互联网上的主机及其软件组成，直接为用户服务（数据通信、资源共享）。
-- 核心部分：为边缘部分提供服务（**连通性、交换服务【为数据的传输选择合适的路径】**），由网络与连接这些网络的路由器组成。
+- **边缘部分**：由连接到互联网上的主机及其软件组成，直接为用户服务（数据通信、资源共享）。
+- **核心部分**：为边缘部分提供服务（**连通性、交换服务【为数据的传输选择合适的路径】**），由网络与连接这些网络的路由器组成。
 
 ##### 3. 按逻辑功能
 
-- **资源子网**向用户提供了硬件、软件和信息资源的共享，主要由连接到互联网上的主机组成。
-- **通信子网**在计算机网络中，负责数据传输和交换。所有的通信设备和通信介质都属于通信子网的范畴，网络适配器这种硬件以及一些底层的网络协议也是为了实现计算机之间的这种信息传输。
+- **资源子网**：向用户提供了硬件、软件和信息资源的共享，主要由连接到互联网上的主机组成。
+- **通信子网**：在计算机网络中，负责数据传输和交换。所有的通信设备和通信介质都属于通信子网的范畴，网络适配器这种硬件以及一些底层的网络协议也是为了实现计算机之间的这种信息传输。
 
 
 
 #### 计算机网络的功能
 
 1. **数据通信**
-2. 资源共享
+2. **资源共享**
 3. 分布式处理：将复杂任务分配给多个计算机处理，将最后的结果进行汇总处理
 4. 提高可靠性：各台计算机互为替代机，进行数据冗余备份
 5. 负载均衡：共同分担大量的网络请求，较小压力的服务器分担部分压力较大的服务器的部分功能
@@ -83,7 +83,7 @@
 
 **总线拓扑**：所有设备共享一条主干线路，通过分支连接到主干上。布线简单，成本低。**总线故障会导致整个网络失效**。当设备增加时，容易出现通信冲突，影响性能。负载能力有限。实时性差。**广播式传输，存在总线争用问题**。
 
-**环形拓扑**：每个设备与相邻的两个设备连接，形成一个闭合的环路。数据以单一方向传输，减少冲突。任意一个节点故障会导致整个网络中断。网络扩展不灵活。**广播式传输**，使用**令牌解决总线争用问题，只有持有令牌者可以发送消息**。
+**环形拓扑**：每个设备与相邻的两个设备连接，形成一个闭合的环路。**数据以单一方向传输，减少冲突**。任意一个节点故障会导致整个网络中断。网络扩展不灵活。**广播式传输**，使用**令牌解决总线争用问题，只有持有令牌者可以发送消息**。
 
 **星形拓扑**：所有设备通过独立的线路连接到一个中央节点（如交换机或路由器）。单个设备故障不会影响整个网络。**依赖中央节点**，若其故障则网络瘫痪。布线成本高，需要大量电缆。**点对点传输**。
 
@@ -106,7 +106,7 @@
 
 | 网络类型   | 定义                                                         |
 | ---------- | ------------------------------------------------------------ |
-| 广播式网络 | 所有节点共享同一条通信信道，数据包发送后会被所有设备接收，但只有目标节点处理 |
+| 广播式网络 | 所有节点共享同一条通信信道，数据包发送后会被所有设备接收，**但只有目标节点处理** |
 | 点对点网络 | 每一对通信设备之间通过独立的通信链路进行数据传输，不共享传输介质 |
 
 
@@ -115,7 +115,7 @@
 
 信道：表示向某一方向传送信息的通道。通信线路：一条通信线路在逻辑上往往对应一条发送信道和一条接收信道。
 
-`K M G T` 在计算机网络中转换为`10^3`倍率，在计算机组成原理与操作系统中是`2^10`倍率
+`K M G T` 在计算机网络中一般转换为`10^3`倍率，在计算机组成原理与操作系统中是`2^10`倍率
 
 ##### 1. 速率、带宽、吞吐量
 
@@ -137,17 +137,17 @@
 | **时延带宽积**    | 表示网络中同时存在的数据量，为 **带宽 × 时延**，用于衡量链路的"填充"程度 |
 | **往返时延 RTT ** | 数据从**发送端发送完**到接收端再**返回发送端**所需的时间，单位为 **ms**。**RTT 是 TCP 等协议中重要的性能指标** |
 
-> 发送时延：又名传输时延，节点将数据推向信道所花的时间。
+> **发送时延**：又名传输时延，节点将数据推向信道所花的时间。
 >
-> 传播时延：电磁波在信道中传播一定的距离所花的时间。
+> **传播时延**：电磁波在信道中传播一定的距离所花的时间。
 >
-> 处理时延：被路由器处理所花的时间 (如：分析首部、查找存储转发表)。
+> **处理时延**：被路由器处理所花的时间 (如：分析首部、查找存储转发表)。
 >
-> 排队时延：数据排队进入、排队发出路由器所花的时间。
+> **排队时延**：数据排队进入、排队发出路由器所花的时间。
 
 ##### 3. 信道利用率
 
-表示信道中实际用于传输数据的时间与总可用时间的比值。信道利用率越高，说明链路资源的使用越有效。。`信道利用率 = 有数据通过的时间 / （有数据通过的时间 + 没数据通过的时间）`。信道利用率太低，浪费资源。**过高的信道利用率可能导致网络拥塞和延迟增大。**
+表示信道中实际用于传输数据的时间与总可用时间的比值。信道利用率越高，说明链路资源的使用越有效。。`信道利用率 = 有数据通过的时间 / （有数据通过的时间 + 没数据通过的时间）`。**信道利用率太低，浪费资源**。**过高的信道利用率可能导致网络拥塞和延迟增大。**
 
 
 
@@ -252,15 +252,15 @@
 
 #### 协议、服务
 
-实体：第$n$层中的活动元素称为$n$​层实体。同一层的实体就是对等实体。
+**实体**：第$n$层中的活动元素称为$n$​层实体。同一层的实体就是对等实体。
 
-协议：为进行网络中的对等实体数据交换而建立的规则、标准或约定。是水平方向的。
+**协议**：为进行网络中的对等实体数据交换而建立的规则、标准或约定。是水平方向的。
 
 - **语法**：数据与控制信息的格式。
 - **语义**：需要发出何种控制信息、完成何种动作及做出何种应答。例如，协议中需要明确规定发送方完数据后，接收方是否需要应答。
 - **同步**：**执行各种操做的条件、时序关系**等。例如，发送方发完数据后，接收方需要立即应答。如果发送方在10秒内未收到“传输成功”应答，则发送方会再次发送数据。
 
-服务：下层为相邻上层提供的功能调用，是垂直方向的。
+**服务**：下层为相邻上层提供的功能调用，是垂直方向的。
 
 网络的体系结构是**计算机网络的各层及其协议的集合**，就是这个计算机网络及其构件所应完成的**功能的精确定义(不涉及实现)**。实现是遵循这种体系结构的前提下，用何种硬件或软件完成这些功能的问题。
 
