--- a/408/计算机组成原理.md
+++ b/408/计算机组成原理.md
@@ -29,7 +29,7 @@
 
 **计算机组成原理就是在研究计算机硬件的底层协调和工作方式**。其中，**计算机硬件包括CPU、内存、外存、显卡等部件**，而操作系统和应用软件安装在计算机硬件之上，通过计算机网络实现计算机之间的信息互联互通。
 
-**CPU**：型号和性能决定游戏图像处理速度。有金属针脚，用于传递数据信息。
+**CPU**：中央处理器，完成对数据的处理，型号和性能决定数据处理速度。**一般由运算器和控制器组成**。有金属针脚，用于传递数据信息。**双核是指两个运算器，一个控制器**。
 
 **内存**：大小影响多应用程序的流畅性。有金属针脚，用于传递数据信息。**CPU和内存之间的数据交换通过主板上的印刷电路板传输二进制信息。**
 
@@ -75,21 +75,57 @@ CPU 执行时间;MIPS、MFLOPS 、GFLOPS、TFLOPS、PFLOPS。
 
 权：每位数字的值等于数字乘以所在位数的相关常数，这个常数就是权。
 
-##### 二进制数、八进制数和十六进制数转换成十进制数
+**B表示二进制，O表示八进制，H表示十六进制。**
+
+**二、八、十六进制转十进制**：
+
+例如，八进制 $23$ 转换为十进制：
+$$
+2 \times 8^1 + 3 \times 8^0 = 16 + 3 = 19
+$$
+**十进制转二进制**：
+
+例如，将十进制数 $13$ 转换为二进制：
+$$
+13 \div 2 = 6 \quad \text{余数} = 1 \\
+6 \div 2 = 3 \quad \text{余数} = 0 \\
+3 \div 2 = 1 \quad \text{余数} = 1 \\
+1 \div 2 = 0 \quad \text{余数} = 1 \\
+\text{结果（倒序）} = 1101
+$$
+
+**二进制与八进制**:
+
+例如，二进制 $110110$ 转换为八进制：
+$$
+110 \quad 110 \Rightarrow 6 \quad 6 \Rightarrow 66
+$$
+**二进制与十六进制**:
+
+例如，二进制 $10111011$ 转换为十六进制：
+$$
+1011 \quad 1011 \Rightarrow B \quad B \Rightarrow BB
+$$
+**八进制与十六进制**:
+
+先将八进制转换为二进制，再将二进制转换为十六进制。
 
 
 
-##### 十进制数转换成二进制数
+#### 二机制计算
+
+$$
+1011 + 1001 = 10010
+$$
 
 
-
-##### 二进制数、八进制数和十六进制数之间的转换
 
 
 
 #### 真值和机器数
 
-真值：数据的数值通常以正(+)负(-)号后跟绝对值来表示，称之为真值。
+真值：数据的数值通常以正(+)负(-)号后跟绝对值来表示。
+
 机器数：在计算机中正负号也需要数字化，一般用0表示正号，1表示负号。把符号数字化的数成为机器数。
 
 
@@ -99,11 +135,15 @@ CPU 执行时间;MIPS、MFLOPS 、GFLOPS、TFLOPS、PFLOPS。
 在计算机中采用4位二进制码对每个十进制数位进行编码。4位二进制码有16种不同的组合，从中选出10种来表示十进制数位的0～9，用0000，0001，…，1001分别表示0，1，…，9，每个数位内部满足二进制规则，而数位之间满足十进制规则，故称这种编码为以二进制编码的十进制（binary coded decima1，简称BCD）码
 
 
+
+
 #### 字符与字符串
 
 在计算机中要对字符进行识别和处理，必须通过编码的方法，按照一定的规则将字符用一组二进制数编码表示。字符的编码方式有多种，常见的编码有ASCII码、EBCDIC码等。
 
-ASCII码用7位二进制表示一个字符，总共128个字符元素，包括10个十进制数字（0-9）、52个英文字母（A-Z和a-z）、34专用符号和32控制符号。
+**ASCII码用7位二进制表示一个字符，总共128个字符元素，数字 < 大写字母 < 小写字母**
+
+![undefined](https://raw.githubusercontent.com/qinshuxiang/repo/main/ASCII.png)
 
 EBCDIC码为Extended Binary Coded Decimal Interchange Code的简称，它采用8位来表示一个字符。
 
@@ -130,6 +170,8 @@ EBCDIC码为Extended Binary Coded Decimal Interchange Code的简称，它采用8
 ### 定点数的表示和运算
 
 #### 定点数的表示
+
+
 
 
 
