--- a/补充知识点/网络与信息安全.md
+++ b/补充知识点/网络与信息安全.md
@@ -1,6 +1,8 @@
-# 网络安全
+# 网络与信息安全
 
-### 网络信息安全
+## 安全常识
+
+### 网络安全
 
 网络安全:计算机网络安全是指计算机、网络系统的硬件、软件以及系统中的数据受到保护，不因偶然的或恶意的原因而遭到破坏、更改、泄露，确保系统能连续和可靠地运行，使网络服务不中断。广义上说，凡是涉及网络上信息的保密性、完整性、可用性、真实性和可
 控性的相关技术和理论，都是网络安全所要研究的领域。
@@ -13,17 +15,23 @@
 
 
 
-#### 对安全的基本要求
-
-- 保密性：保护资源免遭非授权用户“读出”，包括传输信息的加密、存储信息加密。
-- 完整性：保护资源免遭非授权用户“写入”，包括数据完整性、软件完整性、操作系统完整性、内存及磁盘的完整性、信息交换的真实性和有效性。
-- 可用性：保护资源免遭破坏或干扰，包括防止病毒入侵和系统瘫痪、防止信道拥塞及拒绝服务、防止系统资源被非法抢占。
-- 可控性：对非法入侵提供检测与跟踪，并能干扰其入侵行为。
-- 可核查性：可追查安全事故的责任人，对违反安全策略的事件提供审计手段，能记录和追踪他们的活动。
+### 网络信息安全
 
 
 
-#### 安全策略和防御原则
+
+
+### 对安全的基本要求
+
+- **保密性**：保护资源免遭非授权用户“读出”，包括传输信息的加密、存储信息加密。
+- **完整性**：保护资源免遭非授权用户“写入”，包括数据完整性、软件完整性、操作系统完整性、内存及磁盘的完整性、信息交换的真实性和有效性。
+- **可用性**：保护资源免遭破坏或干扰，包括防止病毒入侵和系统瘫痪、防止信道拥塞及拒绝服务、防止系统资源被非法抢占。
+- **可控性**：对非法入侵提供检测与跟踪，并能干扰其入侵行为。
+- **可核查性**：可追查安全事故的责任人，对违反安全策略的事件提供审计手段，能记录和追踪他们的活动。
+
+
+
+### 安全策略和防御原则
 
 1. 防火墙和网络边界保护：通过配置防火墙、入侵检测系统(IDS)和入侵防御系统(IPS)等技术来监控和管理网络流量，以阻止未经授权的访问和攻击。
 2. 访问控制：实施强大的身份验证和授权机制，确保只有经过授权的用户能够访问敏感信息和系统资源。这可以通过密码、双因素认证、访问控制列表(ACL)等手段实现。
@@ -36,7 +44,7 @@
 
 
 
-#### 攻击的方式
+### 攻击的方式
 
 **漏洞检查**：主要通过分析IT基础架构来检测系统中可能存在的漏洞，通常使用**自动化工具**或开源软件来扫描和识别潜在的安全漏洞。这些工具可以自动检测系统中的弱点和配置错误，帮助识别可能被攻击者利用的漏洞。
 
@@ -115,7 +123,11 @@ ddos，dos，肉鸡
 
 
 
-### 加密
+SQL注入
+
+
+
+### 加密与认证
 
 对称加密
 
@@ -139,8 +151,6 @@ md5单向加密，加密不可逆，主要用于用户密码的加密。
 
 
 
-### 认证
-
 KPI
 
 数字签名
@@ -160,8 +170,6 @@ KPI
 防病毒网关是一种网络设备，用以保护网络内(一般是局域网)进出数据的安全。主要体现在病毒杀除、关键字过滤(如色情、反动)、垃圾邮件阻止的功能，同时部分设备也具有一定防火墙(划分Vlan)的功能。如果与互联网相连，就需要网关的防病毒软件。能够检测进出网络内部的数据，对HTTP、FTP、SMTP、IMAP四种协议的数据进行病毒扫描，一旦发现病毒就会采取相应的手段进行隔离或查杀，在防护病毒方面起到了非常大的作用。
 
 
-
-### SQL注入攻击
 
 
 
