--- a/补充知识点/网络与信息安全.md
+++ b/补充知识点/网络与信息安全.md
@@ -44,7 +44,7 @@
 
 
 
-### 攻击的方式
+### 威胁与攻击类型
 
 **漏洞检查**：主要通过分析IT基础架构来检测系统中可能存在的漏洞，通常使用**自动化工具**或开源软件来扫描和识别潜在的安全漏洞。这些工具可以自动检测系统中的弱点和配置错误，帮助识别可能被攻击者利用的漏洞。
 
@@ -129,7 +129,7 @@ SQL注入
 
 ### 加密与认证
 
-对称加密
+#### 对称加密
 
 **DES**
 
@@ -137,7 +137,9 @@ AES
 
 
 
-非对称加密，既可以加密也可以实现数字签名
+#### 非对称加密
+
+既可以加密也可以实现数字签名
 
 **RSA**
 
@@ -147,19 +149,25 @@ ECC
 
 
 
+#### 哈希函数
+
+
+
 md5单向加密，加密不可逆，主要用于用户密码的加密。
 
 
 
-KPI
 
-数字签名
+
+#### 数字签名 与 PKI
 
 数字签名是只有信息的发送者才能产生的别人无法伪造的一段数字串，这段数字串同时也是对信息的发送者发送信息真实性的一个有效证明，可用于实现身份鉴别。
 
 
 
-### 防火墙
+### 网络安全
+
+#### 防火墙与入侵检测系统
 
 防火墙是建立在内外网络边界上的过滤封锁机制，它认为内部网络是安全和可信赖的，而外部网络是不安全和不可信赖的。一般而言，Internet防火墙**建立在一个网络的内部网络与外部网络的交叉点**，保护内部网络不受攻击。防火墙的作用是防止不希望的、未经授权的数据包进出被保护的内部网络，通过边界控制强化内部网络的安全。
 
@@ -171,7 +179,63 @@ KPI
 
 
 
+#### VPN与安全隧道
 
+
+
+#### 安全协议（HTTPS, SSL/TLS）
+
+
+
+### 应用安全
+
+#### Web应用安全（OWASP Top Ten）
+
+
+
+#### 数据库安全
+
+
+
+#### 移动应用安全
+
+
+
+### 风险管理
+
+#### 安全评估与测试
+
+
+
+#### 漏洞扫描与渗透测试
+
+
+
+#### 事件响应与恢复
+
+
+
+### 合规与法律
+
+#### 数据保护法（GDPR等）
+
+
+
+#### 行业标准（ISO 27001, NIST等）
+
+
+
+### 前沿技术
+
+#### IoT安全
+
+
+
+#### 云安全
+
+
+
+#### 区块链安全
 
 
 
