--- a/080902/软件工程.md
+++ b/080902/软件工程.md
@@ -198,17 +198,34 @@
 1. Putnam模型：动态多变量模型，是假设在软件开发的整个生存周期中工作量的特定分布。
 2. COCOMO模型：是最精确、最易于使用的成本估算模型之一。
 
+
+
 #### 项目进度管理
 
 确保软件项目在规定的时间内按期完成。一个软件项目通常可以分成多个子项目和任务，有些任务可以并行开发，有些必须等另一些任务完成后才能进行。每个任务都需要一定的资源，包括人、时间等，项目管理者的任务就是定义所有项目任务以及它们之间的依赖关系，制定项目的进度安排，规划每个任务所需的工作量和持续时间，并不断跟踪项目执行情况，及时调整。
 
 常见的进度安排的图形化方法有**甘特图**和**计划评审技术图**。
 
+
+
 #### 软件项目评审
 
 设计质量评审：总体设计思想与设计方针、需求规格说明、概要设计、保密措施、操作特性、性能的实施情况：可靠性、修改性、可移植性、可扩充性、可测试性、复用性。
 
 程序质量的评审：功能结构、模块结构、处理过程结构。
+
+
+
+#### 风险应对策略
+
+1. **风险规避（Avoidance）**
+   通过改变项目计划或流程，**避免风险发生**。例如，在设计阶段发现某技术存在较高风险，选择不使用该技术。
+2. **风险减轻（Mitigation）**
+   采取措施**减少风险发生的可能性或降低其影响**。例如，为系统增加冗余或备份，以减少数据丢失的风险。
+3. **风险转移（Transfer）**
+   将风险的责任转移给第三方，比如**购买保险**或**将项目的某些部分外包**，以让其他方承担潜在损失。
+4. **风险接受（Acceptance）**
+   对于无法回避、转移或减轻的风险，选择**接受风险并准备应急措施**。通常用于低概率或低影响的风险。
 
 
 
