--- a/补充知识点/网络与信息安全.md
+++ b/补充知识点/网络与信息安全.md
@@ -4,7 +4,7 @@
 
 ### 网络安全
 
-网络安全:计算机网络安全是指计算机、网络系统的硬件、软件以及系统中的数据受到保护，不因偶然的或恶意的原因而遭到破坏、更改、泄露，确保系统能连续和可靠地运行，使网络服务不中断。广义上说，凡是涉及网络上信息的保密性、完整性、可用性、真实性和可
+网络安全：计算机网络安全是指计算机、网络系统的硬件、软件以及系统中的数据受到保护，不因偶然的或恶意的原因而遭到破坏、更改、泄露，确保系统能连续和可靠地运行，使网络服务不中断。广义上说，凡是涉及网络上信息的保密性、完整性、可用性、真实性和可
 控性的相关技术和理论，都是网络安全所要研究的领域。
 
 网络安全涉及的主要内容：**运行系统的安全、信息系统的安全、信息传播的安全和信息内容的安全。**
@@ -13,15 +13,7 @@
 
 信息安全管理体系包含：**密码管理、网络管理、设备管理、人员管理**。
 
-
-
-### 网络信息安全
-
-
-
-
-
-### 对安全的基本要求
+**基本要求**：
 
 - **保密性**：保护资源免遭非授权用户“读出”，包括传输信息的加密、存储信息加密。
 - **完整性**：保护资源免遭非授权用户“写入”，包括数据完整性、软件完整性、操作系统完整性、内存及磁盘的完整性、信息交换的真实性和有效性。
@@ -29,9 +21,7 @@
 - **可控性**：对非法入侵提供检测与跟踪，并能干扰其入侵行为。
 - **可核查性**：可追查安全事故的责任人，对违反安全策略的事件提供审计手段，能记录和追踪他们的活动。
 
-
-
-### 安全策略和防御原则
+**安全策略和防御原则**
 
 1. 防火墙和网络边界保护：通过配置防火墙、入侵检测系统(IDS)和入侵防御系统(IPS)等技术来监控和管理网络流量，以阻止未经授权的访问和攻击。
 2. 访问控制：实施强大的身份验证和授权机制，确保只有经过授权的用户能够访问敏感信息和系统资源。这可以通过密码、双因素认证、访问控制列表(ACL)等手段实现。
@@ -46,84 +36,33 @@
 
 ### 威胁与攻击类型
 
-**漏洞检查**：主要通过分析IT基础架构来检测系统中可能存在的漏洞，通常使用**自动化工具**或开源软件来扫描和识别潜在的安全漏洞。这些工具可以自动检测系统中的弱点和配置错误，帮助识别可能被攻击者利用的漏洞。
+#### **漏洞检查与渗透测试**
 
-**渗透测试**：通过**模拟恶意黑客的攻击方法**，实际尝试利用这些漏洞来分析可能对信息系统造成的破坏。渗透测试不仅**依赖于自动化工具，还需要人为参与**，以确保测试的全面性和有效性。渗透测试人员会使用各种工具和技术，
+- **漏洞检查**：分析IT基础架构，使用**自动化工具**或开源软件扫描系统中的潜在安全漏洞，帮助识别配置错误和弱点。
+- **渗透测试**：模拟攻击者的方式尝试利用漏洞，**结合自动化工具和人为参与**确保测试全面性。用于评估系统可能遭受的破坏。
+- **蜜罐技术**：部署诱饵主机或服务，诱使攻击者进行攻击，帮助防御方了解潜在安全威胁。
 
-蜜罐
+#### **常见攻击手段**
 
-嗅探
-
-
-
-溢出攻击
-
-
-
-网络攻击类型
-
-恶意软件：病毒、蠕虫、特洛伊木马
-
-计算机病毒是指在计算机程序中插入的破坏计算机功能或毁坏数据，影响计算机使用，并能自我复制的一组计算机指令或程序。
-
-熊猫烧香、红色代码、爱虫病毒、勒索病毒都属于蠕虫病毒。
-
-冰河是木马程序。
-
-感染exe可执行文件，com命令文件，dll，sys，wxd文件
-
-宏病毒，word，excel文件
-勒索病毒 445端口
-
-软件中含有一个觉察不出的有害的程序段，当它被执行时，会破坏用户的安全，这种应用程序称为特洛伊木马。
-
-蜜罐技术本质上是一种对攻击方进行欺骗的技术，通过布置一些作为诱饵的主机、网络服务或者信息，诱使攻击方对它们实施攻击，从而可以对攻击行为进行捕获和分析，能够让防御方清晰地了解他们所面对的安全威胁。
-
-
-
-拒绝服务是指通过向服务器发送大量垃圾信息或干扰信息的方式，导致服务器无法向正常用户提供服务的现象。
-
-
-
-IP地址欺骗是一种黑客的攻击形式，黑客使用一台计算机上网,而借用另外一台机器的IP地址,从而冒充另外一台机器与服务器打交道。
-
-
-
-嗅探技术可以获取网络上流经的数据包，口令可以作为数据包被嗅探器捕捉，然后解开这个数据包就可以获取相应信息，实现监听。
-
-将带病毒的存储设备设置为只读状态并不能阻止病毒感染其他计算机或存储设备，通过将病毒本身复制到其他设备即可达到传播的目的。
-
-
-
-“勒索蠕虫”即“WannaCry”病毒，是一种“勒索式”的蠕虫病毒软件，利用Windows操作系统445端口存在的漏洞进行传播，WannaCry主要利用了微软“视窗”系统的漏洞，以获得自动传播的能力，能够在数小时内感染一个系统内的全部电脑。具有自我复制、主动传播的特性。
-
-网络钓鱼
-
-社会工程学攻击
-
-
-
-ddos，dos，肉鸡
-
-
-
-网络扫描，端口扫描
-
-
-
-未经授权访问，数据泄露
-
-
-
-零日漏洞
-
-
-
-电子邮件利用
-
-
-
-SQL注入
+- **拒绝服务攻击（DoS/DDoS）**：通过发送大量垃圾信息或干扰信息，使服务器无法正常为用户提供服务。
+- **重放攻击**：攻击者截获并重新发送网络上的有效数据包，从而试图冒充合法用户进行操作。
+  - **IP地址欺骗**：攻击者伪装成其他IP地址进行攻击，实现身份伪装。
+  - **嗅探技术**：通过监听网络数据包获取敏感信息，口令等信息可被嗅探器捕获。
+  - **ARP攻击**：伪造网关ARP报文使得数据包无法发送到网关。
+- **溢出攻击**是一种利用缓冲区边界检查不足的攻击手法。攻击者通过向程序发送超出预期长度的数据来覆盖缓冲区外的内存，导致程序执行未定义行为。溢出攻击通常会用到 **NOP滑梯**（一组无操作指令）和 **Shellcode**（一段用于控制系统的代码）来确保攻击的可靠性。
+- **社会工程学攻击**：利用心理操控获取用户信息或获取系统访问权限。
+  - **电子邮件利用**，则是指攻击者通过伪造的电子邮件发送带有恶意代码的附件或链接。
+  - **钓鱼攻击**：冒充可信任的发件人，引诱用户点击恶意链接或下载恶意附件。
+  - **跨站脚本（XSS）**：如果邮件系统处理不当，可能导致恶意脚本在用户浏览邮件时执行。
+- **零日漏洞**：系统中尚未修补的漏洞，利用该漏洞进行的攻击极具危害性。
+- **未经授权访问**：非法访问系统数据，造成数据泄露。
+- **SQL注入**：利用SQL代码漏洞访问或修改数据库数据。
+- **端口扫描与网络扫描**：检测开放端口，寻找潜在弱点。
+- **病毒**：植入破坏计算机功能或数据的程序，具有自我复制能力。将带病毒的存储设备设置为只读状态并不能阻止病毒感染其他计算机或存储设备，通过将病毒本身复制到其他设备即可达到传播的目的。感染常见文件类型如**.exe、.com、.dll、.sys**等。**典型病毒**：熊猫烧香、红色代码、勒索病毒等。
+  - **蠕虫病毒**：**自我传播、自动扩散**的病毒。例子包括**WannaCry - 勒索蠕虫**，通过**445端口**的漏洞传播。
+  - **特洛伊木马**：带有**隐藏恶意程序**的应用软件，一旦执行即可能损害用户安全。常见的有：冰河。**控制端（客户端），被控制端（服务端）**。
+  - **宏病毒**：特定于Office文档的病毒，如**Word**或**Excel**文件中的宏代码。
+  - **勒索软件**：加密用户数据，要求赎金解密，常结合蠕虫特性，如WannaCry。
 
 
 
