--- a/补充知识点/网络与信息安全.md
+++ b/补充知识点/网络与信息安全.md
@@ -70,37 +70,59 @@
 
 #### 对称加密
 
-**DES**
+**对称加密**是指加密和解密都使用相同的密钥。数据的发送者和接收者必须共享这把密钥，才能完成加密和解密过程。
 
-AES
+**常见算法**：**DES、AES**、3DES
 
 
 
 #### 非对称加密
 
-既可以加密也可以实现数字签名
+**非对称加密**使用一对密钥：**公钥**和**私钥**。公钥用于加密，私钥用于解密，或者反过来。公钥公开给所有人，私钥则需保密。**密钥管理简单**：只需确保私钥的安全，不需要共享密钥。**速度慢**：非对称加密算法计算复杂，通常只用于小数据加密。
 
-**RSA**
-
-DSA 
-
-ECC
+**常见算法**：**RSA**、DSA、ECC
 
 
 
-#### 哈希函数
+#### 哈希算法
+
+**哈希函数**是一种将任意长度的输入数据转换为固定长度输出的算法。输出值通常称为**哈希值**、**散列值**或**消息摘要**，用于确认唯一身份。哈希函数广泛应用于数据校验、加密存储、数字签名等领域。**确定性**：相同的输入总是产生相同的哈希值。**抗碰撞性**：难以找到两个不同的输入有相同的哈希值。**不可逆性**：通过哈希值很难还原出原始数据，这使得哈希函数常用于存储密码等敏感信息。**敏感性**：输入的微小变化会导致完全不同的哈希值，这种特性称为“雪崩效应”。
+
+**MD5**（Message Digest Algorithm 5）：生成128位哈希值，速度快，但抗碰撞性弱，已不推荐用于安全场景。
+
+**SHA-1**（Secure Hash Algorithm 1）：生成160位哈希值，抗碰撞性高于MD5，但仍有弱点，目前不再推荐用于安全应用。
+
+**SHA-2**（Secure Hash Algorithm 2）：包含SHA-224、SHA-256、SHA-384、SHA-512等，具有更高的安全性，是目前常用的安全哈希算法。
+
+**SHA-3**：设计为SHA-2的替代方案，具有更高的安全性，适用于更严格的加密需求。
 
 
 
-md5单向加密，加密不可逆，主要用于用户密码的加密。
+**应用场景**
 
-
+- **数据完整性校验**：通过比较文件的哈希值，验证文件是否被篡改。
+- **密码存储**：将密码进行哈希处理后存储，避免明文存储带来的风险。
+- **数字签名**：通过对文件进行哈希处理，可以生成文件的唯一标识，结合公私钥加密，用于身份验证。
 
 
 
 #### 数字签名 与 PKI
 
-数字签名是只有信息的发送者才能产生的别人无法伪造的一段数字串，这段数字串同时也是对信息的发送者发送信息真实性的一个有效证明，可用于实现身份鉴别。
+**数字签名**是一种通过加密技术生成的电子签名，用于验证消息的真实性和完整性。它不仅可以证明信息的来源，还能防止内容被篡改。
+
+**工作原理**：
+
+1. **生成哈希值**：首先对消息内容生成哈希值 $H(M)$。
+2. **签名哈希值**：发送方使用自己的**私钥**对哈希值进行加密，生成签名 $S = \text{Encrypt}_{\text{private}}(H(M))$。
+3. **验证签名**：接收方使用发送方的**公钥**解密签名，得到哈希值 $H(M)$，并将其与从消息内容生成的哈希值对比。如果一致，则验证通过。
+
+**公钥基础设施（PKI）是一套用于管理公钥和私钥的技术、政策和服务体系，支持数据加密、数字签名等功能，从而实现网络通信的安全性。PKI的核心组件包括证书颁发机构（CA）、注册机构（RA）、证书吊销列表（CRL）**等。
+
+**公钥分发和管理**：通过CA颁发的数字证书，安全地分发和验证公钥。
+
+**身份认证**：通过证书的验证流程确保用户的真实身份。
+
+**数据加密和签名**：支持加密通信、数据完整性校验和数字签名。
 
 
 
