--- a/补充知识点/网络与信息安全.md
+++ b/补充知识点/网络与信息安全.md
@@ -96,9 +96,7 @@
 
 **SHA-3**：设计为SHA-2的替代方案，具有更高的安全性，适用于更严格的加密需求。
 
-
-
-**应用场景**
+**哈希函数应用场景**
 
 - **数据完整性校验**：通过比较文件的哈希值，验证文件是否被篡改。
 - **密码存储**：将密码进行哈希处理后存储，避免明文存储带来的风险。
@@ -118,11 +116,17 @@
 
 **公钥基础设施（PKI）是一套用于管理公钥和私钥的技术、政策和服务体系，支持数据加密、数字签名等功能，从而实现网络通信的安全性。PKI的核心组件包括证书颁发机构（CA）、注册机构（RA）、证书吊销列表（CRL）**等。
 
-**公钥分发和管理**：通过CA颁发的数字证书，安全地分发和验证公钥。
+**公钥分发和管理**：**通过CA颁发的数字证书，安全地分发和验证公钥。谁发出谁负责原则。**
 
 **身份认证**：通过证书的验证流程确保用户的真实身份。
 
 **数据加密和签名**：支持加密通信、数据完整性校验和数字签名。
+
+> **CA公钥负责验证证书的真伪。谁发出谁负责原则**
+>
+> **证书是CA发布的，所以找CA，验证需要解密，则使用公钥。**
+>
+> Eg：用户B收到经A数字签名后的消息M，为验证消息的真实性，首先需要从CA获取用户A的数字证书，该数字证书中包含A的公钥，可以利用CA公钥验证该证书的真伪，然后利用A的公钥验证M的真实性。
 
 
 
@@ -133,18 +137,52 @@
 防火墙是建立在内外网络边界上的过滤封锁机制，它认为内部网络是安全和可信赖的，而外部网络是不安全和不可信赖的。一般而言，Internet防火墙**建立在一个网络的内部网络与外部网络的交叉点**，保护内部网络不受攻击。防火墙的作用是防止不希望的、未经授权的数据包进出被保护的内部网络，通过边界控制强化内部网络的安全。
 
 1. 包过滤型防火墙：**包过滤型防火墙工作在OSI模型的网络层和传输层**。通过访问控制表，**检查数据流中每个数据包的源地址、目的地址、所用端口号、协议状态等因素**，来确定是否允许该数据包通过。在网络层，对数据包的源及目的IP具有识别和控制作用，对于传输层，它只能识别数据包是TCP还是UDP及所用的端口信息。
-2. 代理服务器型防火墙：代理服务器型防火墙又称应用级防火墙，工作在OSI模型的应用层，是设置在Internet防火墙网关上的应用，是**网管员允许或拒绝的特定的应用程序或者服务**，同时还可应用于实施较强的数据流监控、过滤、记录和报告等功能。应用级防火墙彻底隔断内网与外网的直接通信，内网用户对外网的访问变成防火墙对外网的访问，然后再由防火墙转发给内网用户。
+2. 代理服务器型防火墙：代理服务器型防火墙又称应用级防火墙，工作在OSI模型的应用层，是设置在Internet防火墙网关上的应用，是**网管员允许或拒绝的特定的应用程序或者服务**，同时还可应用于实施较强的数据流监控、过滤、记录和报告等功能。**应用级防火墙彻底隔断内网与外网的直接通信**，内网用户对外网的访问变成防火墙对外网的访问，然后再由防火墙转发给内网用户。
 3. 检测型防火墙：新一代的产品，**能够多各层的数据进行主动地、实时地监测，并在对这些数据进行分析的基础上，能够有效地判断出各层中的非法入侵**。结合了代理服务器防火墙的安全性和包过滤防火墙高速度等优点，在不损失安全性的基础上，将代理服务器防火墙的性能提高了10倍。
 
-防病毒网关是一种网络设备，用以保护网络内(一般是局域网)进出数据的安全。主要体现在病毒杀除、关键字过滤(如色情、反动)、垃圾邮件阻止的功能，同时部分设备也具有一定防火墙(划分Vlan)的功能。如果与互联网相连，就需要网关的防病毒软件。能够检测进出网络内部的数据，对HTTP、FTP、SMTP、IMAP四种协议的数据进行病毒扫描，一旦发现病毒就会采取相应的手段进行隔离或查杀，在防护病毒方面起到了非常大的作用。
+**防病毒网关**是一种网络设备，用以保护局域网进出数据的安全。主要体现在病毒杀除、关键字过滤(如色情、反动)、垃圾邮件阻止的功能，同时部分设备也具有一定防火墙(划分Vlan)的功能。如果与互联网相连，就需要网关的防病毒软件。能够检测进出网络内部的数据，**对HTTP、FTP、SMTP、IMAP四种协议的数据进行病毒扫描**，一旦发现病毒就会采取相应的手段进行隔离或查杀，在防护病毒方面起到了非常大的作用。
 
 
 
 #### VPN与安全隧道
 
+VPN 是一种通过公共网络（如互联网）创建安全连接的技术，它允许用户在不安全的网络中安全地发送和接收数据。
+
+**功能**：
+
+- **加密**：VPN 使用加密技术保护数据，防止未授权访问。
+- **隐私保护**：通过改变用户的IP地址，VPN 能够隐藏用户的真实位置和网络活动。
+- **远程访问**：允许用户安全地访问公司网络或内部资源，即使他们在外部网络中。
+
+安全隧道是一种在两个网络之间建立加密连接的机制，确保数据在传输过程中的安全。
+
+**功能**：
+
+- **数据保护**：通过隧道传输的数据会被加密，确保在传输途中的机密性和完整性。
+- **协议支持**：可以通过多种协议（如IPSec、SSL/TLS）实现，适用于不同类型的网络通信。
+
+VPN 可以视为一种具体实现安全隧道的方式，它在建立连接时通常会创建一个安全隧道来保护数据传输。
+
 
 
 #### 安全协议（HTTPS, SSL/TLS）
+
+HTTPS是HTTP的安全版本，使用SSL/TLS协议加密数据传输。
+
+**作用**：
+
+- 确保数据在客户端与服务器之间传输的安全性，防止中间人攻击。
+- 通过SSL/TLS提供身份验证，确保用户与真正的服务器通信。
+
+SSL是最初的安全协议，TLS是其更新版本，旨在提供更强的安全性。
+
+**主要功能**：
+
+- **加密**：保护数据在传输过程中的机密性。
+- **完整性**：确保数据在传输过程中未被篡改。
+- **身份验证**：验证通信双方的身份，防止伪造。
+
+HTTPS利用SSL/TLS协议为HTTP通信提供安全保障。具体来说，HTTPS在HTTP的基础上，通过SSL/TLS建立安全的加密通道，确保数据的安全性和完整性。
 
 
 
