基础部分更新

--- a/408/数据结构.md
+++ b/408/数据结构.md
@@ -112,28 +112,19 @@ $O(1) \rightarrow O(\log_2 n) \rightarrow O(n) \rightarrow O(n \log_2 n) \righta
 
 **排序二叉树**：是一种**自平衡**的二叉搜索树，确保任意节点的左右子树高度差不超过1。这保证了树的高度尽量小，避免极端情况下退化为链表。
 
-``` javascript
-// 完全二叉树
-       1
-      / \
-     2   3
-    / \ 
-   4  5
-
-// 满二叉树
-       1
-      / \
-     2   3
-    / \ / \
-   4  5 6  7
-```
-
 **遍历方式**：二叉树的遍历方式有：
 
 - **前**序遍历（**根**->左->右）
 - **中**序遍历（左->**根**->右）
 - **后**序遍历（左->右->**根**）
 - 层序遍历（按层访问）
+
+**堆**是一种完全二叉树（完全填满，除了最后一层可以不完全），分为：
+
+- **大顶堆**：每个节点的值都大于或等于其子节点的值。
+- **小顶堆**：每个节点的值都小于或等于其子节点的值。
+
+![img](https://raw.githubusercontent.com/qinshuxiang/repo/main/堆.png)
 
 
 
