--- a/408/计算机组成原理.md
+++ b/408/计算机组成原理.md
@@ -141,7 +141,7 @@ $$
 
 在计算机中要对字符进行识别和处理，必须通过编码的方法，按照一定的规则将字符用一组二进制数编码表示。字符的编码方式有多种，常见的编码有ASCII码、EBCDIC码等。
 
-**ASCII码用7位二进制表示一个字符，总共128个字符元素，数字 < 大写字母 < 小写字母**
+**ASCII码用7位二进制表示一个字符，总共128个字符元素，数字 < 大写字母 < 小写字母，大写字母的ASCII码比对应的小写字母只少32（十进制）。**
 
 ![undefined](https://raw.githubusercontent.com/qinshuxiang/repo/main/ASCII.png)
 
@@ -238,16 +238,41 @@ EBCDIC码为Extended Binary Coded Decimal Interchange Code的简称，它采用8
 
 ### 存储器的分类
 
-1. 按存储介质分类
-   1. 半导体存储器
-   2. 磁表面存储器
-   3. 磁芯存储器
-   4. 光盘存储器
-2. 按存取方式分类
-   1. 随机存储器
-   2. 只读存储器
-   3. 串行访问存储器
-3. 按在计算机中的作用分类
+#### 1. 按存储介质分类
+
+- **半导体存储器**：使用半导体材料（如硅）制作，包括RAM、ROM等。
+- **磁表面存储器**：如硬盘、软盘等，利用磁性材料存储数据。
+- **磁芯存储器**：早期的一种存储器，用磁性材料环形芯存储信息。
+- **光盘存储器**：如CD、DVD等，利用激光技术读写数据。
+
+#### 2. 按存取方式分类
+
+- **随机存储器**：允许以任意顺序访问数据，如RAM。
+- **只读存储器（ROM）**：只能读取数据，无法写入，通常用于存储固定程序。
+- **串行访问存储器**：数据按固定顺序访问，如磁带存储器。
+
+#### 3. 按在计算机中的作用分类
+
+- **主存储器**：用于存储正在处理的数据和程序指令。主要包括RAM和ROM。**主存储器主要由存储体、控制线路、地址寄存器、数据寄存器、和地址译码电路等组成部分。**
+- **辅存储器**：用于长期存储数据和文件。包括硬盘、光盘、U盘等。
+- **缓存存储器**：位于CPU与主存之间，用于提高访问速度。如L1、L2和L3缓存。
+- **寄存器**：位于CPU内部，用于存储指令和操作数。
+
+#### 4. **按存储器工作方式分类**
+
+- **读写存储器**：数据可读可写。如RAM。
+- **只读存储器**：数据只能读，不能写。如ROM。
+
+#### 5. **按存储器访问方式分类**
+
+- **按地址访问的存储器**：数据通过地址进行访问。
+- **按内容访问的存储器**：数据根据内容匹配直接访问。（相连存储器）
+
+#### 6. **按寻址方式分类**
+
+- **随机存储器**：可直接通过地址访问任意存储单元。
+- **顺序存储器**：数据按固定顺序存取。
+- **直接存储器**：数据通过硬件控制直接访问（如硬盘）。
 
 
 
