--- a/408/计算机网络.md
+++ b/408/计算机网络.md
@@ -1498,8 +1498,18 @@ HTTPS可以理解为是安全版的HTTP协议，实际就是在 TCP 层与 HTTP 
 
 ## 推荐视频
 
+:star: :star: :star: 【从零理解计算机网络】 https://www.bilibili.com/video/BV1ozBeYZEYa/?share_source=copy_web
+
+<video src="../资源/计算机网络（中英）基础讲解.mp4"></video>
+
+---
+
 :star: :star: :star: 【10分钟速通计算机网络 每个开发者都具备的计算机常识】 https://www.bilibili.com/video/BV1jx421X7zH/?share_source=copy_web&vd_source=480aa1ab6f679a8e2419597450b2f8b8
+
+<video src="../资源/计算机网络基础讲解.mp4"></video>
 
 ---
 
 :star: :star: :star: 【王道计算机考研 计算机网络】 https://www.bilibili.com/video/BV19E411D78Q/?share_source=copy_web&vd_source=480aa1ab6f679a8e2419597450b2f8b8
+
+**认准咸鱼学长**
