--- a/080902/软件工程.md
+++ b/080902/软件工程.md
@@ -181,7 +181,7 @@
 
 ![软件工程(5)--喷泉模型-阿里云开发者社区](https://raw.githubusercontent.com/qinshuxiang/repo/main/喷泉模型.jpeg)
 
-喷泉模型是一种软件开发过程模型，通常用于描述在软件开发过程中如何处理需求变更和系统的逐步构建。喷**泉模型强调了多个开发阶段可以并行进行**，而不仅仅是线性或顺序执行。这个模型适用于需求经常变化、复杂的系统开发，特别是在不断演化的环境中。类似于原型模型。
+喷泉模型是一种软件开发过程模型，**喷泉模型强调了多个开发阶段可以并行进行**，而不仅仅是线性或顺序执行。这个模型适用于需求经常变化、复杂的系统开发，特别是在不断演化的环境中。。**是典型的面向对象生命周期模型，是一种以用户需求为动力，以对象作为驱动的模型。**该模型**克服了瀑布模型不支持软件重用和多项开发活动集成的局限性**。“喷泉” 一词本身体现了**迭代和无间隙特性**。迭代意味着模型中的开发活动常常需要重复多次，在迭代过程中不断地完善软件系统，无间隙是指在开发活动之间不存在明显的边界。
 
 
 
@@ -239,7 +239,7 @@
 >
 > **数据流图：描述数据在软件流动被处理的逻辑过程，用于功能建模，在需求分析阶段产生。**
 >
-> **数据字典：数据的信息集合，数据流图中所有数据定义的集合，在需求分析阶段产生。**
+> **数据字典：数据的信息集合，数据流图中所有数据定义的集合，在需求分析阶段产生。**使用 SA方法进行需求分析，其建立的模型的核心是**数据字典**，围绕这个核心，有三个层次的模型，分别是**数据模型（ER图）、功能模型（数据流图）和行为模型（状态转换图）**(也称为状态模型)。
 
 UML（统一建模语言）是一种标准化的建模语言，用于对软件系统进行可视化、描述、构造和文档化。常见的UML图包括：
 
