--- a/重点部分/网络与信息安全.md
+++ b/重点部分/网络与信息安全.md
@@ -142,6 +142,16 @@
 
 **防病毒网关**是一种网络设备，用以保护局域网进出数据的安全。主要体现在病毒杀除、关键字过滤(如色情、反动)、垃圾邮件阻止的功能，同时部分设备也具有一定防火墙(划分Vlan)的功能。如果与互联网相连，就需要网关的防病毒软件。能够检测进出网络内部的数据，**对HTTP、FTP、SMTP、IMAP四种协议的数据进行病毒扫描**，一旦发现病毒就会采取相应的手段进行隔离或查杀，在防护病毒方面起到了非常大的作用。
 
+**创建一个防火墙策略的步骤如下**：
+
+第一步：识别确实必要的网络应用程序；
+
+第二步：识别与应用程序相关的脆弱性；
+
+第三步：对应用程序的保护方式进行成本—效益分析；
+
+第四步：创建表示保护方式的应用程序通信矩阵，并在应用程序通信矩阵的基础上建立防火墙规则集。
+
 
 
 #### VPN与安全隧道
