--- a/重点部分/计算机网络.md
+++ b/重点部分/计算机网络.md
@@ -388,6 +388,15 @@ TCP/IP **传输层**可向上层提供有连接可靠的服务TCP协议和无连
 - 有线传输介质：
   - 双绞线和同轴电缆
   - **光纤负责传输光信号，是传输速度最快、距离最长、抗干扰能力最强且不受监听的计算机网络传输介质**
+
+> 计算机局域网中的双绞线可分为**非屏蔽双绞线(UTP)和屏蔽双绞线(STP)**两大类
+>
+> **STP** 外面由一层金属材料包裹，以减小辐射，防止信息被窃听，同时具有较高的数据12传输速率，但价格较高，安装也比较复杂
+>
+> **UTP**无金属屏蔽材料，只有一层绝缘胶皮包裹价格相对便宜，组网灵活
+>
+> **所以目前局域网采用的双绞线一般为5类UTP。**
+
 - 无线传输介质：
   - 无线电波：穿透力强、距离长、信号指向性弱
   - 微波：频率高、信号指向性强
@@ -1174,6 +1183,8 @@ IP组播使用特定的地址范围：**224.0.0.0/4**，即从224.0.0.0到239.25
 热备份是指在联机（运行）状态下备份应用系统或数据库进行备份，与之对应的是冷备份，冷备份是指在未联机（关机）状态下对应用系统或数据库进行备份。
 
 热恢复是指应用系统发布后，发现了bug，如果重新发布则导致用户体验不好等不良后果，因此采用热修复的方法去除bug，而不影响应用系统的使用。
+
+
 
 
 
