--- a/重点部分/软件工程.md
+++ b/重点部分/软件工程.md
@@ -14,6 +14,8 @@
 
 软件工程强调使用**生存周期方法学**和**结构化技术**。
 
+软件工程**基本原则**包括：抽象、信息隐蔽、模块化、局部化、确定性、一致性、完备性、可验证性。
+
 
 
 #### 基本原理
@@ -235,11 +237,11 @@
 
 结构化开发方法强调系统结构的合理性以及所开发的软件结构的合理性。
 
-> **系统流程图：是一种描述物理系统的图。**
->
-> **数据流图：描述数据在软件流动被处理的逻辑过程，用于功能建模，在需求分析阶段产生。**
->
-> **数据字典：数据的信息集合，数据流图中所有数据定义的集合，在需求分析阶段产生。**使用 SA方法进行需求分析，其建立的模型的核心是**数据字典**，围绕这个核心，有三个层次的模型，分别是**数据模型（ER图）、功能模型（数据流图）和行为模型（状态转换图）**(也称为状态模型)。
+**系统流程图：是一种描述物理系统的图。**
+
+**数据流图：描述数据在软件流动被处理的逻辑过程，用于功能建模，在需求分析阶段产生。**
+
+**数据字典：数据的信息集合，数据流图中所有数据定义的集合，在需求分析阶段产生。**使用 SA方法进行需求分析，其建立的模型的核心是**数据字典**，围绕这个核心，有三个层次的模型，分别是**数据模型（ER图）、功能模型（数据流图）和行为模型（状态转换图）**(也称为状态模型)。
 
 UML（统一建模语言）是一种标准化的建模语言，用于对软件系统进行可视化、描述、构造和文档化。常见的UML图包括：
 
