--- a/补充部分/数据结构.md
+++ b/补充部分/数据结构.md
@@ -60,7 +60,7 @@
 
 $O(1) \rightarrow O(\log_2 n) \rightarrow O(n) \rightarrow O(n \log_2 n) \rightarrow O(n^2) \rightarrow O(n^3) \rightarrow O(2^n) \rightarrow O(n!)$
 
-**空间复杂度：度量算法执行过程中的内存开销。**
+**空间复杂度：度量算法执行过程中的内存开销。**空间复杂度是指算法在计算机内执行时所需存储空间的度量。算法执行期间所需要的存储空间包括3个部分：**算法程序所占的空间、输入的初始数据所占的存储空间、算法执行过程中所需要的额外空间**。
 
 算法执行时，需要内存存放局部变量和参数。执行过程中所需的内存空间大小是固定不变的常数值。
 
@@ -71,6 +71,8 @@ $O(1) \rightarrow O(\log_2 n) \rightarrow O(n) \rightarrow O(n \log_2 n) \righta
 
 
 ## 线性表
+
+数据元素之间的关系有两种不同的表示方法：顺序映象和非顺序映象，并由此得到两种不同的存储结构：**顺序存储结构和链式存储结构**。在计算机中用一组地址连续的存储单元依次存储线性表的各个数据元素，称作**线性表的顺序存储结构**。
 
 线性表是由相同数据类型的n个数据元素组成的有限序列，数据元素之间有线性关系，每个元素有唯一的位序。
 
@@ -153,16 +155,12 @@ $O(1) \rightarrow O(\log_2 n) \rightarrow O(n) \rightarrow O(n \log_2 n) \righta
 
 顺序查找，用于线性表，从头到尾依次查找。
 
-二分查找，适用于有序的顺序表，如果中间项 `mid = (low + high) // 2` 向下取整
+适用于有序的顺序表，如果中间项 `mid = (low + high) // 2` 向下取整，在使用二分法（Binary Search）查找时，比较的最大次数应为 $k = \lceil \log_2{n} \rceil$，向上取整。
 
-```javascript
-3 6 8 10 12 15 16 18 21 25 30 查找 11
-11 < 15
-11 > 8
-11 > 10 // mid 向下取整
-11 < 12
-// 11 不存在
-```
+**举例：**
+
+- 如果数组长度为 $n = 16$，则 $\log_2{16} = 4$，最大比较次数为 $4$。
+- 如果数组长度为 $n = 10$，则 $\log_2{10} \approx 3.32$，向上取整为 $4$ 次。
 
 分块查找主要用于静态顺序表，结合了顺序查找和分块的思想，目的是提高查找效率。
 
@@ -170,6 +168,10 @@ $O(1) \rightarrow O(\log_2 n) \rightarrow O(n) \rightarrow O(n \log_2 n) \righta
 - **分块**：`[10, 20, 30]`, `[40, 50, 60]`, `[70, 80, 90]`
 - **块的信息**：`min: [10, 40, 70]`, `max: [30, 60, 90]`
 - 根据要查找的元素值，通过比较最小值和最大值来确定目标元素可能所在的块。在确定的块内进行顺序查找，以找到目标元素。
+
+
+
+
 
 
 
@@ -234,4 +236,8 @@ $O(1) \rightarrow O(\log_2 n) \rightarrow O(n) \rightarrow O(n \log_2 n) \righta
 1. 从数列中挑出一个元素，称为 “基准”（pivot）;
 2. 重新排序数列，所有元素比基准值小的摆放在基准前面，所有元素比基准值大的摆在基准的后面（相同的数可以到任一边）。在这个分区退出之后，该基准就处于数列的中间位置。这个称为分区（partition）操作；
 3. 递归地（recursive）把小于基准值元素的子数列和大于基准值元素的子数列排序；
+
+## 补充
+
+Bloomfilter是由HowardBloom在1970年提出的二进制向量数据结构，它具有空间和时间效率，被用来检测一个元素是不是集合中的一个成员。如果检测结果为是，该元素**不一定**在集合中；但如果检测结果为否，该元素**一定不**在集合中。当插入的元素越多，错判“在集合内”的概率就越大。**Bloomfilter不能删除一个元素**，多个元素哈希的结果可能在Bloomfilter结构中占用的是同一个位，如果删除了一个比特位，就会影响多个元素的检测。
 
