--- a/补充部分/程序设计.md
+++ b/补充部分/程序设计.md
@@ -26,6 +26,14 @@
 
 
 
+### Java
+
+面向对象程序设计方法强调在软件开发过程中面向待求解问题域中的事物，即面向客观世界本身，运用人类认识客观世界的普遍思维方法，直观、准确、自然地描述客观世界中的相关事物。它把客观世界中具有相同属性或操作的一类事物抽象成类，它的基本特征主要有抽象性、继承性、封装性和多态性。其中，**继承是一个类（子类）直接使用另一个类（父类）的所有属性和方法（权限为私有的属性和方法除外），这使得面向对象程序设计语言有了良好的重用性，也是其不同于其他语言的最主要特点。**
+
+java源代码由编译器编译成字节码存放在 class文件中。执行时，由java虚拟机(jvm)读取字节码文件翻译并执行。在Java中，垃圾回收是一个自动的进程可以替代程序员进行内存的分配与回收这些复杂的工作，Java有四种类型的垃圾回收器。Java服务器主要为应用程序提供运行环境，为组件提供服务。从功能上分为两类：WEB 应用服务器和 Java EE 应用服务器。
+
+
+
 #### Java Vs. C++
 
 1. 指针与内存管理
