--- a/补充部分/计算机组成原理.md
+++ b/补充部分/计算机组成原理.md
@@ -53,13 +53,21 @@
 
 响应时间：从事件开始到事件结束的时间，也称执行时间。
 
-CPU时钟周期：机器主频的倒数
+CPU时钟周期：机器主频的倒数，由CPU时钟定义的定长时间间隔，是CPU工作的最小时间单位，也称节拍脉冲或T周期。
 
 主频：CPU工作主时钟的频率
 
 CPI：执行一条指令所需要的平均时钟周期
 
 CPU 执行时间;MIPS、MFLOPS 、GFLOPS、TFLOPS、PFLOPS。
+
+> 指令周期是指取出并执行一条指令所需的时间。
+>
+> 存储器进行一次“读”或“写”操作所需的时间称为存储器的访问时间（或读写时间），而连续启动两次独立的“读”或“写”操作（如连续的两次“读”操作）所需的最短时间，称为存取周期（或存储周期）。
+
+
+
+
 
 
 
@@ -68,6 +76,8 @@ CPU 执行时间;MIPS、MFLOPS 、GFLOPS、TFLOPS、PFLOPS。
 ### 数制与编码
 
 #### 进位计数制及其相互转换
+
+**计算机中常用的数有定点数和浮点数**
 
 进位计数制是指按照进位制的方法表示数，不同的数制均涉及两个基本概念：基数和权。
 
