--- a/重点部分/数据库与数据挖掘.md
+++ b/重点部分/数据库与数据挖掘.md
@@ -270,6 +270,10 @@ FOR EACH ROW
 SET NEW.last_updated = NOW();
 ```
 
+使用触发器，可以保证数据库的完整性，减少程序的代码，降低开发难度。
+
+
+
 ##### 视图
 
 视图是基于SQL语句的结果集的可视化的表：
@@ -306,6 +310,20 @@ INNER JOIN department d ON e.department_id = d.id;
 ```
 
 这些概念和操作构成了数据库管理和使用的核心。熟练掌握这些操作可以帮助有效地设计、管理和操作数据库系统。
+
+##### 物理存储
+
+数据库运行一段时间后，由于记录不断的增删改，会使数据库的情况变坏，降低了数据的存取效率。此时就需要对数据库进行重新安排存储位置，回收垃圾、减少指针链等的再组织。而当数据库增加新的实体，取消了某些应用后，**原有的数据库设计不能满足要求，就要对其进行重构造，调整数据库的模式或外模式**。故数据库管理员对数据进行再组织和重构。
+
+由于CPU和内存的速度远大于硬盘的读写速度，所以可以**把不同的数据文件放在不同的物理硬盘里**，这样执行查询的时候，就可以让多个硬盘同时进行查询，以充分利用CPU和内存的性能，提高查询速度；而所有数据都放在一个分区上，当有大量用户访问时会造成，硬盘访问频繁，降低访问效率。所以可以进行**将数据库的数据库文件和日志文件分别放在不同的分区**上对数据进行性能优化。
+
+**磁盘读写进度对数据库系统是至关重要的，数据库对象在物理设备上的合理分布能改善性能。**
+
+**磁盘镜像会减慢磁盘读写的速度。**
+
+**磁盘I/O速度与磁盘容量无关，将磁盘升级到更大容量并不能提高磁盘I/O速度。**
+
+
 
 
 ### 数据库管理
@@ -408,17 +426,19 @@ SQL优化：
 3. 数据仓库的数据是随着时间的变化而变化的。数据库随着时间变化不断删去旧的数据内容。
 4. 数据仓库的数据是不可修改的。
 
-> **OLTP** 和 **OLAP** 是两种常见的数据处理系统。它们各自针对不同的业务需求设计，分别用于事务处理和数据分析。
->
-> - OLTP 是一种面向实时事务处理的系统，用于处理日常的业务操作，如订单管理、用户注册和支付处理。
->
-> - OLAP 是一种面向数据分析和决策支持的系统，用于处理大量历史数据，支持复杂查询，如统计、汇总和趋势分析。OLAP系统的核心在于对多维数据进行探索和分析。它主要通过**钻取**、**切片和切块**、**旋转**等操作，帮助用户从不同角度挖掘数据，进行深入分析。
->   - **钻取**：从年度销售数据“下钻”到季度、月份，再到具体日期的销售数据。从城市级别的销售额“上卷”到省份或国家级别。
->   - **切片**：选择 2024 年的数据进行分析（锁定时间维度的一部分）。
->   - **切块**：选择“2024 年” + “北美区域” + “电子产品”这几个维度的交集数据。
->   - **旋转**：将“时间”维度从行切换到列，或者将“产品”维度与“区域”维度交换位置。
->
-> 通常，**数据仓库** 会从 OLTP 系统中抽取数据，通过 ETL（Extract-Transform-Load）流程将其转换为分析所需的格式，再提供给 OLAP 系统进行查询和分析。
+数据清洗，从名字上也看得出就是把“脏”的“洗掉”，是指发现并纠正数据文件中可识别的错误的最后一道程序，包括检查数据一致性，处理无效值和缺失值等。不符合要求的数据主要是有**不完整的数据、错误的数据、重复的数据**三大类。**对于异常数据要慎重处理，有可能是错误数据，但也有可能是正确的非常重要的超常数据**。分析处理异常数据需要专业水平，不属于数据清洗工作。
+
+**OLTP** 和 **OLAP** 是两种常见的数据处理系统。它们各自针对不同的业务需求设计，分别用于事务处理和数据分析。
+
+- OLTP 是一种面向实时事务处理的系统，用于处理日常的业务操作，如订单管理、用户注册和支付处理。
+
+- OLAP 是一种面向数据分析和决策支持的系统，用于处理大量历史数据，支持复杂查询，如统计、汇总和趋势分析。OLAP系统的核心在于对多维数据进行探索和分析。它主要通过**钻取**、**切片和切块**、**旋转**等操作，帮助用户从不同角度挖掘数据，进行深入分析。
+  - **钻取**：从年度销售数据“下钻”到季度、月份，再到具体日期的销售数据。从城市级别的销售额“上卷”到省份或国家级别。
+  - **切片**：选择 2024 年的数据进行分析（锁定时间维度的一部分）。
+  - **切块**：选择“2024 年” + “北美区域” + “电子产品”这几个维度的交集数据。
+  - **旋转**：将“时间”维度从行切换到列，或者将“产品”维度与“区域”维度交换位置。
+
+通常，**数据仓库** 会从 OLTP 系统中抽取数据，通过 ETL（Extract-Transform-Load）流程将其转换为分析所需的格式，再提供给 OLAP 系统进行查询和分析。**ETL是构建数据仓库的重要一环，用户从数据源抽取出所需的数据，经过数据清洗，最终按照预先定义好的数据仓库模型，将数据加载到数据仓库中去。**
 
 数据仓库的结构通常包含**数据仓库服务器、OLAP服务器、前端分析工具**等三个层次。来实现数据的集成、存储和分析。这种架构有效地将数据从业务系统转化为可供分析的数据，保证了数据的一致性、完整性和高效性。
 
@@ -431,7 +451,11 @@ SQL优化：
 >
 > 数据仓库是对多个异构数据源（包括历史数据）的有效集成，集成后按主题重组，且存放在数据仓库中的数据一般不再修改。因此，数据仓库支持异构数据。
 
+
+
 ### 数据挖掘
+
+DataMining即数据挖掘，是指在大型数据存储库中，自动地发现有用信息的过程。
 
 主要步骤：数据收集与清洗、数据预处理、模型构建、模型评估、结果分析与应用。
 
