--- a/补充部分/计算机常识.md
+++ b/补充部分/计算机常识.md
@@ -82,7 +82,7 @@ Word 2010文档的默认后缀扩展名为**.docx**
 
 产生式由条件和行动组成。通常解决一个简单问题只需要一个产生式，而解决一个复杂问题则需要若干个产生式，这些产生式组和在一起，便成了产生式系统。产生式系统由一个**综合数据库、一组产生式规则（知识库）和一个控制系统**三个基本要素组成。
 
-
+能力模型，国家标准GB/T 28827.1《信息技术服务运行维护第1部分通用要求》定义了IT运维能力模型，该樟型包含**治理要求、运行维护服务能力体系和价值实现。**
 
 
 
