--- a/补充部分/数据结构.md
+++ b/补充部分/数据结构.md
@@ -121,6 +121,31 @@ $O(1) \rightarrow O(\log_2 n) \rightarrow O(n) \rightarrow O(n \log_2 n) \righta
 - **后**序遍历（左->右->**根**）
 - 层序遍历（按层访问）
 
+已知前序遍历ABCDEF，中序遍历CBAEDF，后序遍历解法
+
+```javascript
+A			A
+B		B
+C C
+D					D
+E				E
+F						F
+	C	B	A	E	D	F
+// 后序遍历结果：CBEFDA 
+```
+
+已知后序遍历DABEC，中序遍历DEBAC，前序遍历解法
+
+```javascript
+C					C
+E		E
+B			B	
+A				A
+D	D
+	D	E	B	A	C
+// 前序遍历结果：CEDBA 
+```
+
 **堆**是一种完全二叉树（完全填满，除了最后一层可以不完全），分为：
 
 - **大顶堆**：每个节点的值都大于或等于其子节点的值。
