--- a/补充部分/计算机组成原理.md
+++ b/补充部分/计算机组成原理.md
@@ -344,6 +344,17 @@ RAID5是一种存储性能、数据安全和存储成本兼顾的存储解决方
 
 
 
+在计算机体系结构中，**PC** 和 **IR** 是两种常见的寄存器，通常出现在处理器的执行过程中。它们分别表示：
+
+1. **PC (Program Counter，程序计数器)**：
+   - **功能**：PC是用来存储**下一条将要执行的指令**的内存地址。每次CPU执行完一条指令后，PC会自动增加，指向下一条指令的地址。这个寄存器帮助CPU按照程序的指令顺序进行执行。
+   - **作用**：确保程序能够按照预定顺序执行。通常，PC会指向内存中存放指令的地址，随着程序的执行，PC会不断更新。
+2. **IR (Instruction Register，指令寄存器)**：
+   - **功能**：IR是用来存储**当前正在执行的指令**。当指令从内存中取出后，它被存储在IR中，然后CPU根据指令执行相应的操作。
+   - **作用**：保存当前指令以便解码和执行。在指令周期中，指令会先从内存中加载到IR中，然后根据IR中的指令内容进行操作。
+
+
+
 ### 指令执行过程
 
 
